<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailReservationActivity"
    android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_nomFilm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="30sp"
             />
        <TextView
            android:id="@+id/tv_heure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/txt_seance_de"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/tv_coutTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="25sp"

            android:text="@string/txt_cout_total"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/txt_reservation_effectuee"/>
    </LinearLayout>


</LinearLayout>