<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReserverActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_weight="0.6">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.60"
            android:gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/affichefilm"
                android:contentDescription="@string/txt_description_affiche" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="0.4">
            <TextView
                android:id="@+id/tv_titre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_seance_de"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/tv_heure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.4">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_de_places"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_tarif"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/b_reserver"
                android:layout_marginBottom="0dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_nbPlacesNormal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_nb_place_par_defaut"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/b_plusNormal"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/b_plus"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/b_moinsNormal"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:text="@string/b_moins"
                            android:textSize="25sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_nbPlacesEtudiant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_nb_place_par_defaut"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/b_plusEtudiant"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/b_plus"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/b_moinsEtudiant"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:text="@string/b_moins"
                            android:textSize="25sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_nbPlacesJeune"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_nb_place_par_defaut"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/b_plusJeune"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/b_plus"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/b_moinsJeune"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:text="@string/b_moins"
                            android:textSize="25sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_tarif_normal"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_tarif_etudiant"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_tarif_jeune"
                        android:textSize="25sp" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/b_reserver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_reserver"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>